--- a/conversa/src/Components/allStyles.css
+++ b/conversa/src/Components/allStyles.css
@@ -102,6 +102,9 @@
         justify-self: center !important;
         grid-template-rows: auto auto auto auto !important;
     }
+    .loading{
+        flex: 1 !important;
+    }
 }
 
 @media only screen and (min-width: 43.063em) and (max-width: 52em) { 
@@ -113,6 +116,9 @@
         min-width: 41vw;
         
     }
+    .loading{
+        flex: 1 !important;
+    }
 } 
 @media only screen and (min-width: 52.063em) and (max-width: 64em) { 
     *{
@@ -122,6 +128,9 @@
     .sidebar-container{
         min-width: 36vw;
         
+    }
+    .loading{
+        flex: 1 !important;
     }
 } 
 
@@ -345,7 +354,7 @@
 .con-title-2 {
     font-family: 'Raleway';
     grid-area: 1/2/2/4;
-    /* font-family: 'Poppins', sans-serif; */
+    font-family: 'Poppins', sans-serif;
     font-weight: bold;
     color: rgba(0, 0, 0, 0.54);
     /* margin-left: 0.125rem; */
@@ -590,7 +599,9 @@
     justify-content: center; */
     flex-direction: column;
     gap: 0.625rem;
-    margin: 0.625rem;
+    /* margin: 0.625rem; */
+    padding: 0.625rem;
+    /* overflow: hidden; */
 }
 
 .usersonline-header{
@@ -608,16 +619,6 @@
 }
 .usersonline-hleft{
     display: flex;
-    /* flex: 1; */
-    /* flex-direction: column; */
-    /* align-items: center;
-    justify-content: space-between;
-    background-color: #fbfbfd;
-    border-radius: 1.25rem;
-    padding: 1.25rem;
-    box-shadow: rgba(0, 0, 0, 0.2) 0px 0.75rem 1.75rem 0px, rgba(0, 0, 0, 0.1) 0px 0.125rem 0.25rem 0px, rgba(255, 255, 255, 0.05) 0px 0px 0px 0.063rem inset; */
-
-    /* margin: 0.625rem; */
 }
 
 .uo-logo{
@@ -653,7 +654,7 @@
     background-color: #fbfbfd;
     border-radius: 1.25rem;
     padding: 0.625rem 0.938rem;
-    margin: 2.0.313rem;
+    margin: 0.04rem;
     align-items: center;
     transition-duration: 0.5s;
     font-family: 'Poppins', sans-serif;
@@ -667,6 +668,15 @@
 }
 .uo-listitem:active{
     background-color: #fbfbfd;
+}
+
+.loading{
+    padding: 0.625rem;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 0.625rem;
+    flex: 0.7;
 }
 
 
